chap5/manifests/Ingress/example-solrcloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-solrcloud-ingress
  namespace: solr
spec:
  rules:
    - host: example.solr.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: example-solrcloud-common
                port:
                  number: 80
